Fix Loading Screen Color (#6410)
Make default fully opaque so it never partially overlays the rest of the app, which is what made it look bad on other themes, then allow for overrides of non-loading dimmer and just override back to light-blue on micro:bit.

--- a/theme/color-themes/overrides/microbit-light-overrides.css
+++ b/theme/color-themes/overrides/microbit-light-overrides.css
@@ -50,3 +50,8 @@ path.blocklyFlyoutBackground {
 #serialPreview .label {
     border-color: var(--pxt-primary-background);
 }
+
+.ui.dimmer {
+    /* Matches color specified in dimmer.variables, but with partial transparency */
+    background-color: rgba(52, 84, 209, 0.4) !important;
+}
